tools/deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photostream
  namespace: photostream
  labels:
    app: photostream
spec:
  type: ClusterIP
  selector:
    app: photostream
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
